clientside/src/scss/main.scss
/*
 * @bot-written
 *
 * WARNING AND NOTICE
 * Any access, download, storage, and/or use of this source code is subject to the terms and conditions of the
 * Full Software Licence as accepted by you before being granted access to this source code and other materials,
 * the terms of which can be accessed on the Codebots website at https://codebots.com/full-software-licence. Any
 * commercial use in contravention of the terms of the Full Software Licence may be pursued by Codebots through
 * licence termination and further legal action, and be required to indemnify Codebots for any loss or damage,
 * including interest and costs. You are deemed to have accepted the terms of the Full Software Licence on any
 * access, download, storage, and/or use of this source code.
 *
 * BOT WARNING
 * This file is bot-written.
 * Any changes out side of "protected regions" will be lost next time the bot makes any changes.
 */
 @import 'shared/harmony.scss';
 // % protected region % [Add additional imports here] on begin
 @import "~bootstrap/scss/bootstrap";
 // % protected region % [Add additional imports here] end
 
 .admin {
	 @import 'admin/harmony.scss';
	 @import 'admin/import-custom.scss';
 
	 .graphiql-content-container {
		 padding: 0;
		 height: 100%;
	 }
 
	 /* % protected region % [Add extra admin scss here] off begin */
	 /* % protected region % [Add extra admin scss here] end */
 }
 
 .frontend {
	 // % protected region % [If you do not want to include any harmony in the front-end, you can remove the imports below and the scss files] off begin
	 @import 'frontend/harmony.scss';
	 //styles specific to bot only and not related to harmony
	 @import 'frontend/custom-bot-imports.scss';
	 // % protected region % [If you do not want to include any harmony in the front-end, you can remove the imports below and the scss files] end
 
	 .layout__horizontal {
		 display: flex;
		 justify-content:center;
		 align-items: center;
		 padding: 10px 30px;
	 }
 
	 .layout__vertical {
		 display: flex;
		 flex-direction: column;
		 justify-content: space-evenly;
		 padding: 10px;
	 }
 
	 .style-guide {
		 padding: 2vw;
		 margin-left: 2vw;
	 }
 
	 // % protected region % [Add additional front-end style content here] on begin
	 .page-wrapper {
		display: flex;
		flex-direction: column;
		justify-content: space-evenly;
		align-items: center;
		padding: 10px 30px;
		word-wrap:break-word;

		.header {
			align-self: center;
		}

		.body {
		   display: flex;
		   flex-direction: column;
		   overflow: auto;
		   align-items: left;
		   padding: 10px;
		   word-wrap:break-word;

			.map-wrapper {
				height: 100vh;
				width: 80vw;
			}
		}
	}
	 
	 .layout__scroll {
		 > div {
			 max-width: calc(100vw - 32px);
		}
	 }
	 .layout__paragraph{
		display:inline-block;
		align-items: left;
		padding: 10px 15px;
	 }

	 .container {
		position: relative;
		width: 50%;
	  }
	  
	  .image {
		display: block;
		width: 100%;
		height: 275;
		opacity: 0.5;
		box-shadow: 6px 6px 10px #888888;
	  }
	  
	  .overlay {
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		height: 100%;
		width: 100%;
		opacity: 0;
		transition: .5s ease;
		background-color: $color-primary;
		box-shadow: 4px 4px 10px #888888;
	  }
	  
	  .container:hover .overlay {
		opacity: 0.8;
	  }
	  
	  .text {
		color: white;
		font-size: 20px;
		position: absolute;
		top: 50%;
		left: 50%;
		-webkit-transform: translate(-50%, -50%);
		-ms-transform: translate(-50%, -50%);
		transform: translate(-50%, -50%);
		text-align: center;
	  }
	 // % protected region % [Add additional front-end style content here] end
 }
 
 // % protected region % [Customise react-contextify here] off begin
 /* -------- CONTEXT MENU -------- */
 //currently sitting outside of all body-content - style is super generic
 @import 'admin/react-contextify.scss';
 // % protected region % [Customise react-contextify here] end
 
 /* % protected region % [Add extra scss here] off begin */
 /* % protected region % [Add extra scss here] end */

